--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3> &dollar;29</h3>
         <p>per month</p>
       </div>
-      <p>Full access for less than &dollar;1 a dayfor any developers who are serious about honing their skills.
+      <p>Full access for less than &dollar;1 a day
       </p>
       <button> Sign Up</button>
     </div>
